# rust-raytracer

raytracer/: .gitignore  Cargo.toml
raytracer/benches/: sphere_hit.rs
raytracer/data/: test.json
raytracer/src/: config.rs  main.rs  materials.rs  point3d.rs  ray.rs  raytracer.rs  sphere.rs
