[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
palette = "0.6.0"
assert_approx_eq = "1.1.0"
rand = "0.8.4"
jpeg-decoder = "0.3.0"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1.0"
crossbeam = "0.8.2"

[profile.release]
debug = 1

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "sphere_hit"
harness = false